--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,3 +1,21 @@
+@mixin mobile {
+    @media screen and (max-width: 480px) {
+        @content 
+    }
+}
+
+@mixin tablet {
+    @media screen and (max-width: 768px) {
+        @content
+    }
+}
+
+@mixin laptop {
+    @media screen and (max-width: 1200px) {
+        @content
+    }
+}
+
 .home {
     background-color: #a7bcff;
     height: 100vh;
@@ -13,11 +31,15 @@
         height: 80%;
         display: flex;
         overflow: hidden;
+        @include tablet {
+            width: 90%;
+        }
     }
 
     .sidebar {
         flex: 1;
         background-color:  #3e3c61;
+        position: relative;
 
         .navbar {
             display: flex;
@@ -30,6 +52,9 @@
 
             .logo {
                 font-weight: bold;
+                @include tablet {
+                    display: none;
+                }
             }
 
             .user {
@@ -50,6 +75,10 @@
                     font-size: 10px;
                     border: none;
                     cursor: pointer;
+                    @include tablet {
+                        position: absolute;
+                        bottom: 10px
+                    }
                 }
             }
         }
