--- a/src/pages/Register/Register.scss
+++ b/src/pages/Register/Register.scss
@@ -1,3 +1,21 @@
+@mixin mobile {
+    @media screen and (max-width: 480px) {
+        @content 
+    }
+}
+
+@mixin tablet {
+    @media screen and (max-width: 768px) {
+        @content
+    }
+}
+
+@mixin laptop {
+    @media screen and (max-width: 1200px) {
+        @content
+    }
+}
+
 .form-container {
     background-color: #a7bcff;
     height: 100vh;
@@ -17,7 +35,7 @@
         .logo {
             color: #5d5b8d;
             font-weight: bold;
-            font-size: 24px
+            font-size: 24px;
         }
 
         .title {
