--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -61,6 +61,10 @@
                     width: 32px;
                 }
             }
+
+            .error-message {
+                color: red;
+            }
         }
 
         p {
