--- a/src/pages/Register/Register.scss
+++ b/src/pages/Register/Register.scss
@@ -31,6 +31,7 @@
         flex-direction: column;
         gap: 10px;
         align-items: center;
+        position: relative;
 
         .logo {
             color: #5d5b8d;
@@ -78,6 +79,11 @@
                 img {
                     width: 32px;
                 }
+            }
+
+            .error-message {
+                color: red;
+                position: absolute;
             }
         }
 
