--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -84,8 +84,6 @@
         }
 
         .search {
-            
-
             .search-form {
                 padding: 10px;
                 // border-bottom: 1px solid gray;
@@ -265,6 +263,7 @@
                     padding: 10px 15px;
                     color: white;
                     background-color: #8da4f1;
+                    cursor: pointer;
                 }
             }
         }
