Mobile and desktop desgin

--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -1,52 +1,129 @@
+$purple: #6C3483;
+
+@mixin mobile {
+    @media screen and (max-width: 480px) {
+        @content 
+    }
+}
+
+@mixin tablet {
+    @media screen and (max-width: 768px) {
+        @content
+    }
+}
+
+@mixin laptop {
+    @media screen and (max-width: 1200px) {
+        @content
+    }
+}
+
 .form-container {
-    background-color: #a7bcff;
+    background-color: #05050C;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    box-sizing: content-box;
+    overflow-y: hidden;
 
     .form-wrapper {
-        background-color: white;
-        padding: 20px 60px;
+        background-color: #181A20;
+        height: 60%;
         border-radius: 10px;
         display: flex;
         flex-direction: column;
         gap: 10px;
         align-items: center;
-
-        .logo {
-            color: #5d5b8d;
-            font-weight: bold;
-            font-size: 24px
+        justify-content: center;
+        
+        @include mobile() {
+            background-color: transparent;
+            width: 90%;
+            padding: 0;
         }
 
-        .title {
-            color: #5d5b8d;
-            font-size: 14px
+        .top-text {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            margin-bottom: 10%;
+
+            @include mobile() {
+                margin-bottom: 20%;
+            }
+            
+            .logo {
+                color: white;
+                font-size: 34px;
+                margin-bottom: 10px;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+                
+            }
+    
+            .title {
+                color: grey;
+                font-size: 14px;
+            }
         }
+
 
         form {
+            width: 100%;
             display: flex;
             flex-direction: column;
             gap: 15px;
 
+            @include mobile() {
+                width: 100%;
+            }
+
             input {
-                padding: 20px;
+                padding: 15px;
                 border: none;
-                border-bottom: solid 1px #a7bcff;
+                border-bottom: solid 1px #6C3483;
+                background-color: #262A34;
+                border-radius: 5px;
+                color: white;
+                outline: none;
+
+                @include mobile() {
+                    padding: 20px;
+                    border: none;
+                }
 
                 &::placeholder {
                     color: rgb(175, 175, 175);
                 }
             }
 
+            .link {
+                color: grey;
+                text-decoration: none;
+                text-align: end;
+                font-size: 14px;
+            }
+
             button {
-                background-color: #a7bcff;
+                background-color: $purple;
                 color: white;
                 padding: 10px;
                 font-weight: bold;
                 border: none;
                 cursor: pointer;
+                transition: 0.2s;
+                margin-top: 10%;
+                border-radius: 5px;
+
+                @include mobile() {
+                    margin-top: 20%;
+                    padding: 20px;
+                }
+
+                &:hover {
+                    opacity: 0.7;
+                }
             }
 
             label {
@@ -61,19 +138,21 @@
                     width: 32px;
                 }
             }
-
-            .error-message {
-                color: red;
-                position: absolute;
-                bottom: 0;
-                z-index: 10;
-            }
         }
 
         p {
-            color: #5d5b8d;
-            font-size: 12px;
+            color: #FFF;
+            font-size: 14px;
             margin-top: 10px;
+
+            @include mobile() {
+                font-size: 14px;
+            }
+
+            .link {
+                text-decoration: none;
+                color: $purple;
+            }
         }
     }
 }
