--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -1,4 +1,8 @@
-$purple: #6C3483;
+$purple:    #6C3483;
+$dark:      #05050C;
+$dark-gray: #181A20;
+$light-gray:#262A34;
+
 
 @mixin mobile {
     @media screen and (max-width: 480px) {
@@ -19,7 +23,7 @@ $purple: #6C3483;
 }
 
 .form-container {
-    background-color: #05050C;
+    background-color: $dark;
     height: 100vh;
     display: flex;
     align-items: center;
@@ -28,7 +32,7 @@ $purple: #6C3483;
     overflow-y: hidden;
 
     .form-wrapper {
-        background-color: #181A20;
+        background-color: $dark-gray;
         height: 70%;
         border-radius: 10px;
         display: flex;
@@ -66,7 +70,6 @@ $purple: #6C3483;
             }
         }
 
-
         form {
             width: 100%;
             display: flex;
@@ -80,8 +83,8 @@ $purple: #6C3483;
             input {
                 padding: 15px;
                 border: none;
-                border-bottom: solid 1px #6C3483;
-                background-color: #262A34;
+                border-bottom: solid 1px $purple;
+                background-color: $light-gray;
                 border-radius: 5px;
                 color: white;
                 outline: none;
