--- a/src/pages/Register/Register.scss
+++ b/src/pages/Register/Register.scss
@@ -17,7 +17,7 @@
 }
 
 .form-container {
-    background-color: #a7bcff;
+    background-color: #181A20;
     height: 100vh;
     display: flex;
     align-items: center;
