--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,276 +1,377 @@
-$dark-blue: #282A36;
+$purple: #6c3483;
+$dark: #05050c;
+$dark-gray: #181a20;
+$light-gray: #262a34;
 
 @mixin mobile {
-    @media screen and (max-width: 480px) {
-        @content 
-    }
+  @media screen and (max-width: 480px) {
+    @content;
+  }
 }
 
 @mixin tablet {
-    @media screen and (max-width: 768px) {
-        @content
-    }
+  @media screen and (max-width: 768px) {
+    @content;
+  }
 }
 
 @mixin laptop {
-    @media screen and (max-width: 1200px) {
-        @content
-    }
+  @media screen and (max-width: 1200px) {
+    @content;
+  }
 }
 
 .home {
-    background-color: #a7bcff;
-    height: 100vh;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .container {
+    width: 100%;
+    height: 100%;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
+    overflow: hidden;
+  }
 
-    .container {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        overflow: hidden;
+  .sidebar {
+    flex: 1;
+    background-color: $dark-gray;
+    position: relative;
+    border-right: 1px solid grey;
+    display: block;
+
+    .back-btn {
+      display: none;
+    }
+
+    @include mobile() {
+      flex: 3;
+
+      &.closed {
+        flex: 0;
+        display: none;
+      }
+    }
+
+    .navbar {
+      display: flex;
+      align-items: center;
+      background-color: $light-gray;
+      height: 50px;
+      padding: 10px;
+      justify-content: space-between;
+      color: #fff;
+
+      .logo {
+        font-weight: bold;
+
         @include tablet {
-            width: 90%;
+          display: none;
         }
+      }
+
+      .user {
+        display: flex;
+        gap: 10px;
+        display: flex;
+        align-items: center;
+
+        img {
+          background-color: #ddddf7;
+          height: 34px;
+          width: 34px;
+          border-radius: 50%;
+          object-fit: cover;
+        }
+
+        button {
+          background-color: #5d5b8d;
+          color: #ddddf7;
+          font-size: 10px;
+          border: none;
+          cursor: pointer;
+          @include tablet {
+            position: absolute;
+            bottom: 10px;
+          }
+        }
+      }
     }
 
-    .sidebar {
-        flex: 1;
-        background-color:  #282A36;
-        position: relative;
+    .search {
+      .search-form {
+        padding: 10px;
+        margin: 10px auto;
+        width: 80%;
+        background-color: $light-gray;
+        border-radius: 10px;
 
-        .navbar {
-            display: flex;
-            align-items: center;
-            background-color: #2f2d52;
-            height: 50px;
-            padding: 10px;
-            justify-content: space-between;
-            color: #ddddf7;
+        input {
+          background-color: transparent;
+          border: none;
+          color: white;
+          outline: none;
 
-            .logo {
-                font-weight: bold;
-                @include tablet {
-                    display: none;
-                }
-            }
+          &::placeholder {
+            color: lightgray;
+          }
+        }
+      }
+    }
 
-            .user {
-                display: flex;
-                gap: 10px;
+    .user-chat {
+      padding: 10px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      color: white;
 
-                img {
-                    background-color: #ddddf7;
-                    height: 24px;
-                    width: 24px;
-                    border-radius: 50%;
-                    object-fit: cover;
-                }
+      &:hover {
+        background-color: $light-gray;
+        cursor: pointer;
+      }
 
-                button {
-                    background-color: #5d5b8d;
-                    color: #ddddf7;
-                    font-size: 10px;
-                    border: none;
-                    cursor: pointer;
-                    @include tablet {
-                        position: absolute;
-                        bottom: 10px
-                    }
-                }
-            }
+      img {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        object-fit: cover;
+      }
+
+      .user-chat-info {
+        span {
+          font-size: 18px;
+          font-weight: 500;
         }
 
-        .search {
-            .search-form {
-                padding: 10px;
-                // border-bottom: 1px solid gray;
+        p {
+          font-size: 14px;
+          margin: 0;
+          color: lightgray;
+        }
+      }
+    }
+  }
+  .chat {
+    flex: 2;
 
-                input {
-                    background-color: transparent;
-                    border: none;
-                    color: white;
-                    outline: none;
+    @include mobile() {
+      flex: 0;
 
-                    &::placeholder {
-                        color: lightgray;
-                    }
-                }
+      &.opened {
+        flex: 3;
+      }
+    }
+
+    .chat-info {
+      height: 50px;
+      background-color: $light-gray;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      color: white;
+
+      .back-btn {
+        display: none;
+      }
+
+      .chat-back {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+      }
+
+      @include mobile() {
+        .back-btn {
+          font-size: 18px;
+          font-weight: bold;
+          color: white;
+          display: block;
+          background-color: transparent;
+          outline: none;
+          border: none;
+          cursor: pointer;
+
+          &:hover {
+            opacity: 0.7;
+          }
+        }
+      }
+    }
+
+    .chat-icons {
+      display: flex;
+      gap: 10px;
+
+      img {
+        height: 24px;
+        cursor: pointer;
+      }
+    }
+
+    .default-message {
+      background-color: #3c3f4f;
+      height: 100%;
+    }
+
+    .messages {
+      background-color: $dark-gray;
+      padding: 10px;
+      height: calc(100% - 100px);
+      overflow-y: scroll;
+
+      &::-webkit-scrollbar {
+        width: 0.3em;
+        border-radius: 5px;
+      }
+      &::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
+      }
+      &::-webkit-scrollbar-thumb {
+        background-color: rgba(0, 0, 0, 0.1);
+        outline: 1px solid slategrey;
+      }
+
+      .message {
+        display: flex;
+        gap: 20px;
+        margin-bottom: 20px;
+
+        .message-info {
+          display: flex;
+          flex-direction: column;
+          color: gray;
+          font-weight: 300;
+
+          img {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            object-fit: cover;
+          }
+        }
+
+        .message-content {
+          color: white;
+          max-width: 80%;
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
+
+          p {
+            margin: 5px 0;
+            background-color: $light-gray;
+            padding: 10px 20px;
+            border-radius: 0px 10px 10px 10px;
+          }
+
+          img {
+            width: 50%;
+          }
+        }
+        &.owner {
+          flex-direction: row-reverse;
+
+          .message-content {
+            align-items: flex-end;
+
+            p {
+              background-color: $purple;
+              color: white;
+              border-radius: 10px 0 10px 10px;
             }
-        } 
+          }
+        }
+      }
+    }
 
-        .user-chat {
-            padding: 10px;
-            display: flex;
-            align-items: center;
-            gap: 10px;
+    .input {
+      height: 50px;
+      background-color: $light-gray;
+      padding: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      .emoji-container {
+        margin: 0;
+        padding: 0;
+        height: 65vh;
+        position: absolute;
+        width: 70vw;
+        bottom: 4%;
+      }
+
+      .emoji-btn {
+        background-color: transparent;
+        border: none;
+
+        .emoji-icon {
             color: white;
-
+            font-size: 18px;
+            cursor: pointer;
+            margin-right: 5px;
+            
             &:hover {
-                background-color: #2f2d52;
-                cursor: pointer;
-            }
-
-            img {
-                width: 50px;
-                height: 50px;
-                border-radius: 50%;
-                object-fit: cover;
-            }
-
-            .user-chat-info {
-                span {
-                    font-size: 18px;
-                    font-weight: 500;
-                }
-
-                p {
-                    font-size: 14px;
-                    margin: 0;
-                    color: lightgray;
-                }
+                opacity: 0.7;
             }
         }
+      }
+
+      input {
+        width: 100%;
+        border: none;
+        outline: none;
+        color: white;
+        font-size: 18px;
+        background-color: transparent;
+
+        &::placeholder {
+          color: lightgrey;
+        }
+      }
+
+      .send {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+
+        img {
+          height: 24px;
+          transition: 0.4s;
+          cursor: pointer;
+        }
+
+        button {
+          border: none;
+          padding: 10px 15px;
+          color: white;
+          background-color: $purple;
+          border-radius: 15px;
+          cursor: pointer;
+          animation-duration: 0.5s;
+          animation-name: animate-pop;
+          animation-timing-function: cubic-bezier(0.26, 0.53, 0.74, 1.48);
+
+          &:hover {
+            opacity: 0.7;
+          }
+        }
+
+        @keyframes animate-pop {
+          0% {
+            opacity: 0;
+            transform: scale(0.5, 0.5);
+          }
+
+          100% {
+            opacity: 1;
+            transform: scale(1, 1);
+          }
+        }
+      }
     }
-    .chat {
-        flex: 2;
-
-        .chat-info {
-            height: 50px;
-            background-color: #5d5b8d;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            color: lightgrey;
-        }
-
-        .chat-icons {
-            display: flex;
-            gap: 10px;
-
-            img {
-                height: 24px;
-                cursor: pointer;
-            }
-        }
-
-        .default-message {
-            background-color: #3c3f4f;
-            height: 100%;
-        }
-
-        .messages {
-            background-color: #ddddf7;
-            padding: 10px;
-            height: calc(100% - 100px);
-            overflow-y: scroll;
-
-            &::-webkit-scrollbar {
-                width: 0.3em;
-                border-radius: 5px;
-            }
-            &::-webkit-scrollbar-track {
-                box-shadow: inset 0 0 6px rgba(0,0,0,0.00);
-            }
-            &::-webkit-scrollbar-thumb {
-                background-color: rgba(0,0,0,.1);
-                outline: 1px solid slategrey
-            }
-
-            .message {
-                display: flex;
-                gap: 20px;
-                margin-bottom: 20px;
-
-                .message-info {
-                    display: flex;
-                    flex-direction: column;
-                    color: gray;
-                    font-weight: 300;
-
-                    img {
-                        width: 40px;
-                        height: 40px;
-                        border-radius: 50%;
-                        object-fit: cover;
-                    }
-                }
-
-                .message-content {
-                    max-width: 80%;
-                    display: flex;
-                    flex-direction: column;
-                    gap: 10px;
-
-                    p {
-                        margin: 5px 0;
-                        background-color: white;
-                        padding: 10px 20px;
-                        border-radius: 0px 10px 10px 10px;
-                    }
-
-                    img {
-                        width: 50%;
-                    }
-                }
-                &.owner {
-                    flex-direction: row-reverse;
-
-                    .message-content {
-
-                        align-items: flex-end;
-                        p {
-                            background-color: #8da4f1;
-                            color: white;
-                            border-radius: 10px 0 10px 10px;
-                            max-width: max-content;
-                        }
-                    }
-
-                }
-            }
-        }
-
-        .input {
-            height: 50px;
-            background-color: white;
-            padding: 10px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-
-            input {
-                width: 100%;
-                border: none;
-                outline: none;
-                color: #2f2d52;
-                font-size: 18px;
-
-                &::placeholder {
-                    color: lightgrey;
-                }
-            }
-
-            .send {
-                display: flex;
-                align-items: center;
-                gap: 10px;
-
-                img {
-                    height: 24px;
-                    cursor: pointer;
-                }
-
-                button {
-                    border: none;
-                    padding: 10px 15px;
-                    color: white;
-                    background-color: #8da4f1;
-                    cursor: pointer;
-                }
-            }
-        }
-    }
+  }
 }
