--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -69,6 +69,8 @@ $light-gray: #262a34;
         @include tablet {
           display: none;
         }
+
+        
       }
 
       .user {
@@ -86,11 +88,15 @@ $light-gray: #262a34;
         }
 
         button {
-          background-color: #5d5b8d;
-          color: #ddddf7;
-          font-size: 10px;
+          background-color: $purple;
+          color: white;
+          padding: 10px;
+          font-weight: bold;
           border: none;
           cursor: pointer;
+          border-radius: 5px;
+          font-size: 10px;
+
           @include tablet {
             position: absolute;
             bottom: 10px;
@@ -112,6 +118,7 @@ $light-gray: #262a34;
           border: none;
           color: white;
           outline: none;
+          width: 100%;
 
           &::placeholder {
             color: lightgray;
@@ -183,6 +190,10 @@ $light-gray: #262a34;
         color: white;
       }
 
+      .user-image {
+        display: none;
+      }
+
       @include mobile() {
         .back-btn {
           font-size: 18px;
@@ -192,12 +203,23 @@ $light-gray: #262a34;
           background-color: transparent;
           outline: none;
           border: none;
+          margin-bottom: 10px;
           cursor: pointer;
+          font-size: 30px;
 
           &:hover {
             opacity: 0.7;
           }
         }
+      }
+
+      .user-image {
+        display: block;
+        margin: 0 5px 0 5px;
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        object-fit: cover;
       }
     }
 
@@ -302,6 +324,11 @@ $light-gray: #262a34;
         position: absolute;
         width: 70vw;
         bottom: 4%;
+
+        .EmojiPickerReact {
+          z-index: 10;
+          transform: translateY(1%);
+        }
       }
 
       .emoji-btn {
